--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4413d705",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "\n",
+    "# Matthew Pronyshyn 1002365978\n",
+    "\n",
+    "</center>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "062f2946-204a-4dfb-ae77-37e2ca6d2a43",
