--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "# Number of bandits\n",
     "num_bandits = 3\n",
-    "bandit_names = ['Red', 'Blue', 'Other']  # Names for the bandits. \n",
+    "bandit_names = ['Red', 'Blue', 'Other']  # Names for the bandits \n",
     "\n",
     "# Fixed probabilities of success for each bandit\n",
     "true_probabilities = {\n",
