--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "062f2946-204a-4dfb-ae77-37e2ca6d2a43",
    "metadata": {
     "editable": true,
@@ -28,107 +28,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After trial 1, bandit Blue: Alpha 2.0, Beta 1.0, Expectation 0.67\n",
-      "After trial 2, bandit Blue: Alpha 2.0, Beta 2.0, Expectation 0.5\n",
+      "After trial 1, bandit Other: Alpha 2.0, Beta 1.0, Expectation 0.67\n",
+      "After trial 2, bandit Other: Alpha 3.0, Beta 1.0, Expectation 0.75\n",
       "After trial 3, bandit Red: Alpha 1.0, Beta 2.0, Expectation 0.33\n",
-      "After trial 4, bandit Blue: Alpha 2.0, Beta 3.0, Expectation 0.4\n",
-      "After trial 5, bandit Red: Alpha 1.0, Beta 3.0, Expectation 0.25\n",
-      "After trial 6, bandit Blue: Alpha 3.0, Beta 3.0, Expectation 0.5\n",
-      "After trial 7, bandit Blue: Alpha 3.0, Beta 4.0, Expectation 0.43\n",
-      "After trial 8, bandit Blue: Alpha 3.0, Beta 5.0, Expectation 0.38\n",
-      "After trial 9, bandit Blue: Alpha 4.0, Beta 5.0, Expectation 0.44\n",
-      "After trial 10, bandit Blue: Alpha 4.0, Beta 6.0, Expectation 0.4\n",
-      "After trial 11, bandit Other: Alpha 2.0, Beta 1.0, Expectation 0.67\n",
-      "After trial 12, bandit Other: Alpha 2.0, Beta 2.0, Expectation 0.5\n",
-      "After trial 13, bandit Blue: Alpha 4.0, Beta 7.0, Expectation 0.36\n",
-      "After trial 14, bandit Blue: Alpha 5.0, Beta 7.0, Expectation 0.42\n",
-      "After trial 15, bandit Other: Alpha 3.0, Beta 2.0, Expectation 0.6\n",
-      "After trial 16, bandit Other: Alpha 4.0, Beta 2.0, Expectation 0.67\n",
-      "After trial 17, bandit Other: Alpha 5.0, Beta 2.0, Expectation 0.71\n",
-      "After trial 18, bandit Red: Alpha 2.0, Beta 3.0, Expectation 0.4\n",
-      "After trial 19, bandit Other: Alpha 6.0, Beta 2.0, Expectation 0.75\n",
-      "After trial 20, bandit Other: Alpha 7.0, Beta 2.0, Expectation 0.78\n",
-      "After trial 21, bandit Other: Alpha 7.0, Beta 3.0, Expectation 0.7\n",
-      "After trial 22, bandit Other: Alpha 8.0, Beta 3.0, Expectation 0.73\n",
-      "After trial 23, bandit Other: Alpha 9.0, Beta 3.0, Expectation 0.75\n",
-      "After trial 24, bandit Other: Alpha 10.0, Beta 3.0, Expectation 0.77\n",
-      "After trial 25, bandit Other: Alpha 11.0, Beta 3.0, Expectation 0.79\n",
-      "After trial 26, bandit Other: Alpha 11.0, Beta 4.0, Expectation 0.73\n",
-      "After trial 27, bandit Other: Alpha 12.0, Beta 4.0, Expectation 0.75\n",
-      "After trial 28, bandit Other: Alpha 13.0, Beta 4.0, Expectation 0.76\n",
-      "After trial 29, bandit Other: Alpha 13.0, Beta 5.0, Expectation 0.72\n",
-      "After trial 30, bandit Other: Alpha 14.0, Beta 5.0, Expectation 0.74\n",
-      "After trial 31, bandit Other: Alpha 15.0, Beta 5.0, Expectation 0.75\n",
-      "After trial 32, bandit Other: Alpha 16.0, Beta 5.0, Expectation 0.76\n",
-      "After trial 33, bandit Other: Alpha 17.0, Beta 5.0, Expectation 0.77\n",
-      "After trial 34, bandit Other: Alpha 18.0, Beta 5.0, Expectation 0.78\n",
-      "After trial 35, bandit Other: Alpha 19.0, Beta 5.0, Expectation 0.79\n",
-      "After trial 36, bandit Other: Alpha 19.0, Beta 6.0, Expectation 0.76\n",
-      "After trial 37, bandit Other: Alpha 20.0, Beta 6.0, Expectation 0.77\n",
-      "After trial 38, bandit Other: Alpha 20.0, Beta 7.0, Expectation 0.74\n",
-      "After trial 39, bandit Other: Alpha 21.0, Beta 7.0, Expectation 0.75\n",
-      "After trial 40, bandit Other: Alpha 22.0, Beta 7.0, Expectation 0.76\n",
-      "After trial 41, bandit Other: Alpha 23.0, Beta 7.0, Expectation 0.77\n",
-      "After trial 42, bandit Other: Alpha 24.0, Beta 7.0, Expectation 0.77\n",
-      "After trial 43, bandit Other: Alpha 25.0, Beta 7.0, Expectation 0.78\n",
-      "After trial 44, bandit Other: Alpha 25.0, Beta 8.0, Expectation 0.76\n",
-      "After trial 45, bandit Other: Alpha 26.0, Beta 8.0, Expectation 0.76\n",
-      "After trial 46, bandit Other: Alpha 27.0, Beta 8.0, Expectation 0.77\n",
-      "After trial 47, bandit Other: Alpha 28.0, Beta 8.0, Expectation 0.78\n",
-      "After trial 48, bandit Other: Alpha 29.0, Beta 8.0, Expectation 0.78\n",
-      "After trial 49, bandit Other: Alpha 29.0, Beta 9.0, Expectation 0.76\n",
-      "After trial 50, bandit Red: Alpha 3.0, Beta 3.0, Expectation 0.5\n",
-      "After trial 51, bandit Other: Alpha 30.0, Beta 9.0, Expectation 0.77\n",
-      "After trial 52, bandit Other: Alpha 31.0, Beta 9.0, Expectation 0.78\n",
-      "After trial 53, bandit Other: Alpha 32.0, Beta 9.0, Expectation 0.78\n",
-      "After trial 54, bandit Other: Alpha 33.0, Beta 9.0, Expectation 0.79\n",
-      "After trial 55, bandit Other: Alpha 34.0, Beta 9.0, Expectation 0.79\n",
-      "After trial 56, bandit Other: Alpha 35.0, Beta 9.0, Expectation 0.8\n",
-      "After trial 57, bandit Other: Alpha 36.0, Beta 9.0, Expectation 0.8\n",
-      "After trial 58, bandit Other: Alpha 37.0, Beta 9.0, Expectation 0.8\n",
-      "After trial 59, bandit Red: Alpha 3.0, Beta 4.0, Expectation 0.43\n",
-      "After trial 60, bandit Other: Alpha 37.0, Beta 10.0, Expectation 0.79\n",
-      "After trial 61, bandit Other: Alpha 38.0, Beta 10.0, Expectation 0.79\n",
-      "After trial 62, bandit Other: Alpha 39.0, Beta 10.0, Expectation 0.8\n",
-      "After trial 63, bandit Other: Alpha 40.0, Beta 10.0, Expectation 0.8\n",
-      "After trial 64, bandit Other: Alpha 41.0, Beta 10.0, Expectation 0.8\n",
-      "After trial 65, bandit Other: Alpha 42.0, Beta 10.0, Expectation 0.81\n",
-      "After trial 66, bandit Other: Alpha 42.0, Beta 11.0, Expectation 0.79\n",
-      "After trial 67, bandit Other: Alpha 43.0, Beta 11.0, Expectation 0.8\n",
-      "After trial 68, bandit Other: Alpha 44.0, Beta 11.0, Expectation 0.8\n",
-      "After trial 69, bandit Other: Alpha 45.0, Beta 11.0, Expectation 0.8\n",
-      "After trial 70, bandit Other: Alpha 45.0, Beta 12.0, Expectation 0.79\n",
-      "After trial 71, bandit Other: Alpha 45.0, Beta 13.0, Expectation 0.78\n",
-      "After trial 72, bandit Other: Alpha 46.0, Beta 13.0, Expectation 0.78\n",
-      "After trial 73, bandit Other: Alpha 47.0, Beta 13.0, Expectation 0.78\n",
-      "After trial 74, bandit Other: Alpha 48.0, Beta 13.0, Expectation 0.79\n",
-      "After trial 75, bandit Other: Alpha 49.0, Beta 13.0, Expectation 0.79\n",
-      "After trial 76, bandit Other: Alpha 50.0, Beta 13.0, Expectation 0.79\n",
-      "After trial 77, bandit Other: Alpha 51.0, Beta 13.0, Expectation 0.8\n",
-      "After trial 78, bandit Other: Alpha 52.0, Beta 13.0, Expectation 0.8\n",
-      "After trial 79, bandit Other: Alpha 52.0, Beta 14.0, Expectation 0.79\n",
-      "After trial 80, bandit Other: Alpha 53.0, Beta 14.0, Expectation 0.79\n",
-      "After trial 81, bandit Red: Alpha 3.0, Beta 5.0, Expectation 0.38\n",
-      "After trial 82, bandit Other: Alpha 54.0, Beta 14.0, Expectation 0.79\n",
-      "After trial 83, bandit Other: Alpha 55.0, Beta 14.0, Expectation 0.8\n",
-      "After trial 84, bandit Other: Alpha 55.0, Beta 15.0, Expectation 0.79\n",
-      "After trial 85, bandit Other: Alpha 56.0, Beta 15.0, Expectation 0.79\n",
-      "After trial 86, bandit Other: Alpha 57.0, Beta 15.0, Expectation 0.79\n",
-      "After trial 87, bandit Other: Alpha 58.0, Beta 15.0, Expectation 0.79\n",
-      "After trial 88, bandit Other: Alpha 59.0, Beta 15.0, Expectation 0.8\n",
-      "After trial 89, bandit Other: Alpha 60.0, Beta 15.0, Expectation 0.8\n",
-      "After trial 90, bandit Other: Alpha 61.0, Beta 15.0, Expectation 0.8\n",
-      "After trial 91, bandit Other: Alpha 62.0, Beta 15.0, Expectation 0.81\n",
-      "After trial 92, bandit Other: Alpha 62.0, Beta 16.0, Expectation 0.79\n",
-      "After trial 93, bandit Other: Alpha 63.0, Beta 16.0, Expectation 0.8\n",
-      "After trial 94, bandit Red: Alpha 3.0, Beta 6.0, Expectation 0.33\n",
-      "After trial 95, bandit Other: Alpha 64.0, Beta 16.0, Expectation 0.8\n",
-      "After trial 96, bandit Other: Alpha 65.0, Beta 16.0, Expectation 0.8\n",
-      "After trial 97, bandit Other: Alpha 66.0, Beta 16.0, Expectation 0.8\n",
-      "After trial 98, bandit Other: Alpha 67.0, Beta 16.0, Expectation 0.81\n",
-      "After trial 99, bandit Other: Alpha 67.0, Beta 17.0, Expectation 0.8\n",
-      "After trial 100, bandit Other: Alpha 68.0, Beta 17.0, Expectation 0.8\n",
-      "True/Posterior expectations: \"Red\" 0.25/0.33, \"Blue\" 0.5/0.42, \"Other\" 0.75/0.8\n",
+      "After trial 4, bandit Red: Alpha 2.0, Beta 2.0, Expectation 0.5\n",
+      "After trial 5, bandit Blue: Alpha 2.0, Beta 1.0, Expectation 0.67\n",
+      "After trial 6, bandit Blue: Alpha 3.0, Beta 1.0, Expectation 0.75\n",
+      "After trial 7, bandit Other: Alpha 4.0, Beta 1.0, Expectation 0.8\n",
+      "After trial 8, bandit Blue: Alpha 3.0, Beta 2.0, Expectation 0.6\n",
+      "After trial 9, bandit Other: Alpha 5.0, Beta 1.0, Expectation 0.83\n",
+      "After trial 10, bandit Other: Alpha 5.0, Beta 2.0, Expectation 0.71\n",
+      "After trial 11, bandit Blue: Alpha 4.0, Beta 2.0, Expectation 0.67\n",
+      "After trial 12, bandit Other: Alpha 6.0, Beta 2.0, Expectation 0.75\n",
+      "After trial 13, bandit Red: Alpha 2.0, Beta 3.0, Expectation 0.4\n",
+      "After trial 14, bandit Other: Alpha 7.0, Beta 2.0, Expectation 0.78\n",
+      "After trial 15, bandit Other: Alpha 7.0, Beta 3.0, Expectation 0.7\n",
+      "After trial 16, bandit Blue: Alpha 5.0, Beta 2.0, Expectation 0.71\n",
+      "After trial 17, bandit Blue: Alpha 6.0, Beta 2.0, Expectation 0.75\n",
+      "After trial 18, bandit Other: Alpha 8.0, Beta 3.0, Expectation 0.73\n",
+      "After trial 19, bandit Other: Alpha 9.0, Beta 3.0, Expectation 0.75\n",
+      "After trial 20, bandit Blue: Alpha 7.0, Beta 2.0, Expectation 0.78\n",
+      "After trial 21, bandit Blue: Alpha 8.0, Beta 2.0, Expectation 0.8\n",
+      "After trial 22, bandit Blue: Alpha 8.0, Beta 3.0, Expectation 0.73\n",
+      "After trial 23, bandit Other: Alpha 10.0, Beta 3.0, Expectation 0.77\n",
+      "After trial 24, bandit Blue: Alpha 9.0, Beta 3.0, Expectation 0.75\n",
+      "After trial 25, bandit Blue: Alpha 9.0, Beta 4.0, Expectation 0.69\n",
+      "After trial 26, bandit Other: Alpha 11.0, Beta 3.0, Expectation 0.79\n",
+      "After trial 27, bandit Other: Alpha 12.0, Beta 3.0, Expectation 0.8\n",
+      "After trial 28, bandit Blue: Alpha 9.0, Beta 5.0, Expectation 0.64\n",
+      "After trial 29, bandit Other: Alpha 13.0, Beta 3.0, Expectation 0.81\n",
+      "After trial 30, bandit Other: Alpha 13.0, Beta 4.0, Expectation 0.76\n",
+      "After trial 31, bandit Other: Alpha 14.0, Beta 4.0, Expectation 0.78\n",
+      "After trial 32, bandit Other: Alpha 15.0, Beta 4.0, Expectation 0.79\n",
+      "After trial 33, bandit Other: Alpha 16.0, Beta 4.0, Expectation 0.8\n",
+      "After trial 34, bandit Other: Alpha 17.0, Beta 4.0, Expectation 0.81\n",
+      "After trial 35, bandit Blue: Alpha 10.0, Beta 5.0, Expectation 0.67\n",
+      "After trial 36, bandit Other: Alpha 18.0, Beta 4.0, Expectation 0.82\n",
+      "After trial 37, bandit Other: Alpha 19.0, Beta 4.0, Expectation 0.83\n",
+      "After trial 38, bandit Other: Alpha 20.0, Beta 4.0, Expectation 0.83\n",
+      "After trial 39, bandit Other: Alpha 21.0, Beta 4.0, Expectation 0.84\n",
+      "After trial 40, bandit Other: Alpha 22.0, Beta 4.0, Expectation 0.85\n",
+      "After trial 41, bandit Other: Alpha 23.0, Beta 4.0, Expectation 0.85\n",
+      "After trial 42, bandit Other: Alpha 24.0, Beta 4.0, Expectation 0.86\n",
+      "After trial 43, bandit Other: Alpha 25.0, Beta 4.0, Expectation 0.86\n",
+      "After trial 44, bandit Blue: Alpha 10.0, Beta 6.0, Expectation 0.62\n",
+      "After trial 45, bandit Other: Alpha 25.0, Beta 5.0, Expectation 0.83\n",
+      "After trial 46, bandit Other: Alpha 26.0, Beta 5.0, Expectation 0.84\n",
+      "After trial 47, bandit Other: Alpha 26.0, Beta 6.0, Expectation 0.81\n",
+      "After trial 48, bandit Other: Alpha 26.0, Beta 7.0, Expectation 0.79\n",
+      "After trial 49, bandit Other: Alpha 27.0, Beta 7.0, Expectation 0.79\n",
+      "After trial 50, bandit Other: Alpha 27.0, Beta 8.0, Expectation 0.77\n",
+      "After trial 51, bandit Other: Alpha 27.0, Beta 9.0, Expectation 0.75\n",
+      "After trial 52, bandit Other: Alpha 27.0, Beta 10.0, Expectation 0.73\n",
+      "After trial 53, bandit Other: Alpha 27.0, Beta 11.0, Expectation 0.71\n",
+      "After trial 54, bandit Other: Alpha 28.0, Beta 11.0, Expectation 0.72\n",
+      "After trial 55, bandit Other: Alpha 29.0, Beta 11.0, Expectation 0.72\n",
+      "After trial 56, bandit Other: Alpha 30.0, Beta 11.0, Expectation 0.73\n",
+      "After trial 57, bandit Other: Alpha 31.0, Beta 11.0, Expectation 0.74\n",
+      "After trial 58, bandit Other: Alpha 31.0, Beta 12.0, Expectation 0.72\n",
+      "After trial 59, bandit Blue: Alpha 10.0, Beta 7.0, Expectation 0.59\n",
+      "After trial 60, bandit Blue: Alpha 11.0, Beta 7.0, Expectation 0.61\n",
+      "After trial 61, bandit Blue: Alpha 12.0, Beta 7.0, Expectation 0.63\n",
+      "After trial 62, bandit Other: Alpha 32.0, Beta 12.0, Expectation 0.73\n",
+      "After trial 63, bandit Other: Alpha 32.0, Beta 13.0, Expectation 0.71\n",
+      "After trial 64, bandit Other: Alpha 33.0, Beta 13.0, Expectation 0.72\n",
+      "After trial 65, bandit Other: Alpha 34.0, Beta 13.0, Expectation 0.72\n",
+      "After trial 66, bandit Other: Alpha 34.0, Beta 14.0, Expectation 0.71\n",
+      "After trial 67, bandit Other: Alpha 35.0, Beta 14.0, Expectation 0.71\n",
+      "After trial 68, bandit Other: Alpha 35.0, Beta 15.0, Expectation 0.7\n",
+      "After trial 69, bandit Other: Alpha 36.0, Beta 15.0, Expectation 0.71\n",
+      "After trial 70, bandit Blue: Alpha 12.0, Beta 8.0, Expectation 0.6\n",
+      "After trial 71, bandit Other: Alpha 36.0, Beta 16.0, Expectation 0.69\n",
+      "After trial 72, bandit Blue: Alpha 13.0, Beta 8.0, Expectation 0.62\n",
+      "After trial 73, bandit Blue: Alpha 13.0, Beta 9.0, Expectation 0.59\n",
+      "After trial 74, bandit Other: Alpha 37.0, Beta 16.0, Expectation 0.7\n",
+      "After trial 75, bandit Blue: Alpha 14.0, Beta 9.0, Expectation 0.61\n",
+      "After trial 76, bandit Other: Alpha 38.0, Beta 16.0, Expectation 0.7\n",
+      "After trial 77, bandit Blue: Alpha 14.0, Beta 10.0, Expectation 0.58\n",
+      "After trial 78, bandit Other: Alpha 39.0, Beta 16.0, Expectation 0.71\n",
+      "After trial 79, bandit Other: Alpha 39.0, Beta 17.0, Expectation 0.7\n",
+      "After trial 80, bandit Other: Alpha 39.0, Beta 18.0, Expectation 0.68\n",
+      "After trial 81, bandit Blue: Alpha 15.0, Beta 10.0, Expectation 0.6\n",
+      "After trial 82, bandit Other: Alpha 40.0, Beta 18.0, Expectation 0.69\n",
+      "After trial 83, bandit Other: Alpha 41.0, Beta 18.0, Expectation 0.69\n",
+      "After trial 84, bandit Blue: Alpha 16.0, Beta 10.0, Expectation 0.62\n",
+      "After trial 85, bandit Other: Alpha 41.0, Beta 19.0, Expectation 0.68\n",
+      "After trial 86, bandit Other: Alpha 42.0, Beta 19.0, Expectation 0.69\n",
+      "After trial 87, bandit Other: Alpha 43.0, Beta 19.0, Expectation 0.69\n",
+      "After trial 88, bandit Red: Alpha 2.0, Beta 4.0, Expectation 0.33\n",
+      "After trial 89, bandit Other: Alpha 43.0, Beta 20.0, Expectation 0.68\n",
+      "After trial 90, bandit Other: Alpha 44.0, Beta 20.0, Expectation 0.69\n",
+      "After trial 91, bandit Other: Alpha 45.0, Beta 20.0, Expectation 0.69\n",
+      "After trial 92, bandit Blue: Alpha 16.0, Beta 11.0, Expectation 0.59\n",
+      "After trial 93, bandit Other: Alpha 46.0, Beta 20.0, Expectation 0.7\n",
+      "After trial 94, bandit Other: Alpha 46.0, Beta 21.0, Expectation 0.69\n",
+      "After trial 95, bandit Other: Alpha 46.0, Beta 22.0, Expectation 0.68\n",
+      "After trial 96, bandit Other: Alpha 47.0, Beta 22.0, Expectation 0.68\n",
+      "After trial 97, bandit Other: Alpha 47.0, Beta 23.0, Expectation 0.67\n",
+      "After trial 98, bandit Other: Alpha 48.0, Beta 23.0, Expectation 0.68\n",
+      "After trial 99, bandit Other: Alpha 49.0, Beta 23.0, Expectation 0.68\n",
+      "After trial 100, bandit Other: Alpha 50.0, Beta 23.0, Expectation 0.68\n",
+      "True/Posterior expectations/Count: \"Red\" 0.25/0.33/4.0, \"Blue\" 0.5/0.59/25.0, \"Other\" 0.75/0.68/71.0\n",
       "Bandit \"Other\" has the highest posterior expectation.\n"
      ]
     }
@@ -140,6 +140,7 @@
     "# Number of bandits\n",
     "num_bandits = 3\n",
     "bandit_names = ['Red', 'Blue', 'Other']  # Names for the bandits \n",
+    "bandit_count = np.zeros(num_bandits)  # Keep track of the number of times each bandit has been played\n",
     "\n",
     "# Fixed probabilities of success for each bandit\n",
     "true_probabilities = {\n",
@@ -176,10 +177,11 @@
     "    chosen_bandit_index = choose_bandit()\n",
     "    result = perform_trial(chosen_bandit_index)\n",
     "    update_posterior(chosen_bandit_index, result)\n",
-    "\n",
+    "    bandit_count[chosen_bandit_index] += 1\n",
+    "    \n",
     "    print(f'After trial {t+1}, bandit {bandit_names[chosen_bandit_index]}: Alpha {alpha[chosen_bandit_index]}, Beta {beta[chosen_bandit_index]}, Expectation {round(alpha[chosen_bandit_index]/(alpha[chosen_bandit_index]+beta[chosen_bandit_index]),2)}')\n",
     "post_expectations = alpha/(alpha+beta)\n",
-    "print(f'True/Posterior expectations: \"Red\" {true_probabilities[\"Red\"]}/{round(post_expectations[0],2)}, \"Blue\" {true_probabilities[\"Blue\"]}/{round(post_expectations[1],2)}, \"Other\" {true_probabilities[\"Other\"]}/{round(post_expectations[2],2)}')\n",
+    "print(f'True/Posterior expectations/Count: \"Red\" {true_probabilities[\"Red\"]}/{round(post_expectations[0],2)}/{bandit_count[0]}, \"Blue\" {true_probabilities[\"Blue\"]}/{round(post_expectations[1],2)}/{bandit_count[1]}, \"Other\" {true_probabilities[\"Other\"]}/{round(post_expectations[2],2)}/{bandit_count[2]}')\n",
     "print(f'Bandit \"{bandit_names[np.argmax(post_expectations)]}\" has the highest posterior expectation.')"
    ]
   },
@@ -193,6 +195,27 @@
     "After each trial, the algorithm updates its belief about the chosen bandit's probability of success. This is done by adjusting the bandit's Beta posterior distribution hyperparameters: alpha is increased by 1 for a success, and beta is increased by 1 for a failure. The decision on which bandit to select for each trial is based on sampling from the posterior distributions of all bandits. The bandit with the highest sampled posterior value is chosen, a strategy that balances exploration and exploitation.\n",
     "\n",
     "Over successive trials, the algorithm refines its understanding of each bandit's success probability. This continuous updating leads to more accurate predictions on the exploited bandit and, generally, a preference for the bandit with the highest actual probability of success if the true probabilities are not very close."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "25315e2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[0]*3"
    ]
   }
  ],
