--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -118,14 +118,23 @@
    "source": [
     "## Question 3\n",
     "\n",
-    "The posterior distribution $p(\\theta∣x)$ is proportional to the product of the likelihood and the prior. In this case, with a flat prior, the posterior is directly proportional to the likelihood. For a normal likelihood, the posterior distribution in the presence of a flat prior is still a normal distribution."
+    "The posterior distribution $p(\\theta∣x)$ is proportional to the product of the likelihood and the prior. In this case, with a flat prior, the posterior is directly proportional to the likelihood. For a normal likelihood, the posterior distribution in the presence of a flat prior is still a proper normal distribution."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 4"
+    "## Question 4\n",
+    "\n",
+    "When using an improper prior proportional to 1, the relationship between the log likelihood and the log posterior is given by the equation:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\log(p(\\theta|x)) &= \\log\\left(\\frac{p(x|\\theta)p(\\theta)}{p(x)}\\right)\\\\\n",
+    "\\log(p(\\theta|x)) &\\propto \\log(p(x|\\theta)) - \\log(p(x))\n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore the difference between the log likelihood and the log posterior is the log of the marginal likelihood."
    ]
   },
   {
