--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Part 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2\n",
     "## Question 1"
    ]
   },
