--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1"
+    "# Part 1\n",
+    "[Part 1 picture](hw2part1.png)"
    ]
   },
   {
