--- a/Homework4.ipynb
+++ b/Homework4.ipynb
@@ -1267,6 +1267,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "The non-centered parameterization works better for HMC sampling than the \"centered\" parameterization because it flattens out the exessive curvature in the energy function of the centered model. In a centered model, a small $\\tau$ can make it so that the previous $\\theta$'s density evaluates to essentially zero causing a divergence and inefficient sampling. The non-centered approach smooths out these drastic changes by using an intermediary step in the calculations, making it easier for HMC to explore different possibilities without getting stuck, which ultimately improves the algorithm's ability to learn about the model's parameters efficiently."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
@@ -1295,6 +1303,13 @@
    "source": [
     "az.plot_energy(fit_C);\n",
     "az.plot_energy(fit_NC);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " An energy plot is a way of checking if the algorithm was able to adequately explore the posterior distribution. If it was not, the risk of biased posterior estimates is higher when parts of the posterior are not visited with adequate frequency. Here we can see that the first plot, centered model, did not do a good job of exploring the posterior distribution as the marginal energy and energy transition curves do not match up. In the second plot, non-centered model, the two curves match up well which backs up the previous analysis. We can be confident the non-centered model explored the posterior distribution well."
    ]
   }
  ],
