--- a/Homework4.ipynb
+++ b/Homework4.ipynb
@@ -1309,7 +1309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " An energy plot is a way of checking if the algorithm was able to adequately explore the posterior distribution. If it was not, the risk of biased posterior estimates is higher when parts of the posterior are not visited with adequate frequency. Here we can see that the first plot, centered model, did not do a good job of exploring the posterior distribution as the marginal energy and energy transition curves do not match up. In the second plot, non-centered model, the two curves match up well which backs up the previous analysis. We can be confident the non-centered model explored the posterior distribution well."
+    " An energy plot is a way of checking if the algorithm was able to adequately explore the posterior distribution. If it was not, the risk of biased posterior estimates is higher when parts of the posterior are not visited with adequate frequency. Here we can see that the first plot, centered model, did not do a good job of exploring the posterior distribution as the marginal energy and energy transition curves do not match up. This is due to the high curvature of the energy function, with high curvature it is difficult for the HMC algorithm to efficiently explore the posterior distribution. In the second plot, non-centered model, the two curves match up well which backs up the previous analysis. This means the non-centering lowered the curvature of the energy function. We can be confident the non-centered model explored the posterior distribution well."
    ]
   }
  ],
