--- a/MT2-2.ipynb
+++ b/MT2-2.ipynb
@@ -138,25 +138,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e9d810a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "4271781e",
    "metadata": {},
@@ -342,11 +323,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "0750f591",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0 0.2 2.0 0.001\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = np.array([0.397,0.4,0.2,0.002,0.001])\n",
+    "print(p[1]/p[2],p[1]-p[2],p[3]/p[4],p[3]-p[4])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e7d67b3a",
    "metadata": {},
    "source": [
-    "[double click and replace this with your answer]"
+    "[double click and replace this with your answer]\n",
+    "\n",
+    "The ratio $\\frac{p_j}{p_{j'}}$ is releveant as we use it to see the relative difference between the variables.\n",
+    "The absolute difference $p_j - p_{j'}$ matters as we get to see actual scale of the difference between the variables\n",
+    "\n",
+    "With j,j' = (2,3) the ratio and difference are 2.0 and 0.2 respectively while with j,j' = (4,5) they are 2.0 and 0.001. So while the ratio between the parameters are the same, the absolute difference between them is very different. "
    ]
   },
   {
@@ -365,7 +370,9 @@
    "id": "b1737827",
    "metadata": {},
    "source": [
-    "[double click and replace this with your answer]"
+    "[double click and replace this with your answer]\n",
+    "\n",
+    "Because $p_4$ and $p_5$ are very small, t should be large enough so that enough data is collected to provide good inference. Issues could arise if we do not have enough data, for example we could collect no data on chip brand 5 and then the resulting $p_5$ would be zero causing us to divide by zero."
    ]
   }
  ],
