--- a/Homework6.ipynb
+++ b/Homework6.ipynb
@@ -238,6 +238,13 @@
     "$$\\log p(\\beta|y,X) = -\\frac{1}{2}(y - X\\beta)^T(y - X\\beta) - \\lambda \\sum_{i=1}^{n}|\\beta_i|\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bayesians do not optimize posterior distributions, they sample from them; but, the posterior distributions are nonetheless 'regularizations' of the likelihood through the prior."
+   ]
   }
  ],
  "metadata": {
