--- a/Homework6.ipynb
+++ b/Homework6.ipynb
@@ -234,7 +234,7 @@
     "$$\\log p(\\beta|y,X) = -\\frac{1}{2}(y - X\\beta)^T(y - X\\beta) - \\frac{1}{s_i}\\sum_{i=1}^{n}|\\beta_i|\n",
     "$$\n",
     "\n",
-    "If we redefine $\\lambda = \\frac{1}{s_i^2}$:\n",
+    "If we redefine $\\lambda = \\frac{1}{s_i}$:\n",
     "$$\\log p(\\beta|y,X) = -\\frac{1}{2}(y - X\\beta)^T(y - X\\beta) - \\lambda \\sum_{i=1}^{n}|\\beta_i|\n",
     "$$"
    ]
